# GB_RedesII_2025_2

./: .gitignore  CMakeLists.txt  README.md
src/: codificadorDeCanal.h  codificadorDeFonte.h  decodificadorDeCanal.h  decodificadorDeFonte.h  main.cpp  main.h  main_terminal.cpp  print.h  shared.h
